Added unit tests for BookController

--- a/frontend/test/index.html
+++ b/frontend/test/index.html
@@ -28,6 +28,10 @@
 
     <!-- Test for BookAdapter.js --> 
     <script type="module" src="./controller/BookAdapter.test.js"></script>
+
+    <!-- Test for BookController.js -->
+    <script type="module" src="./controller/BookController.test.js"></script>
+
     <!-- ------------------------------------ -->
 
     <!-- Tests for views -->
