Added Router unit tests

--- a/frontend/test/index.html
+++ b/frontend/test/index.html
@@ -26,11 +26,10 @@
     <!-- Test for Book.js --> 
     <script type="module" src="./model/Book.test.js"></script>
 
-    <!-- Test for BookAdapter.js --> 
+    <!-- Test for Controller -->
     <script type="module" src="./controller/BookAdapter.test.js"></script>
-
-    <!-- Test for BookController.js -->
     <script type="module" src="./controller/BookController.test.js"></script>
+    <script type="module" src="./controller/Router.test.js"></script>
 
     <!-- ------------------------------------ -->
 
