Implement 404-Error for navigation, such that no link is active when 404 happens. Extend test data with description.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
   <app-header></app-header>
   
   <!-- Navigation for app -->
-  <app-navigation class="bg-light"></app-navigation>
+  <app-navigation></app-navigation>
   
   <!-- Main content goes in here, namely each view and the messageBox -->
   <main id="main">
