feature/bookRating: Add tests cases
- Add tests for BookStore
- Add tests for BookController
- Add tests for <book-list> element to match new table cells

--- a/frontend/test/index.html
+++ b/frontend/test/index.html
@@ -22,6 +22,7 @@
     <script type="module" src="./model/BookStore-AddBook.test.js"></script>
     <script type="module" src="./model/BookStore-GetBookDetails.test.js"></script>
     <script type="module" src="./model/BookStore-DeleteBook.test.js"></script>
+    <script type="module" src="./model/BookStore-UpdateBook.test.js"></script>
 
     <!-- Test for Book.js --> 
     <script type="module" src="./model/Book.test.js"></script>
